# ffmpeg4android

./: .gitignore  README.md  build.gradle  config.gradle  gradle.properties  module.gradle  settings.gradle
FFmpeg-Example/: build.gradle
audio-lame-encode/: CMakeLists.txt
audio-lame-encode/build-scripts/: build_lame.sh  build_lame_all.sh
audio-lame-encode/src/main/: AndroidManifest.xml
audio-lame-encode/src/main/assets/: input.pcm
audio-lame-encode/src/main/cpp/: lame_encode.cpp  lame_encode.h  mp3_encode.h
audio-lame-encode/src/main/java/com/onzhou/lame/encode/: LameEncoder.java
audio-lame-encode/src/main/java/com/onzhou/lame/main/: LameEncodeActivity.java
audio-lame-encode/src/main/res/layout/: activity_lame_encode.xml
audio-lame-encode/src/test/java/com/onzhou/audio/lame/: ExampleUnitTest.java
audio-opensles/: CMakeLists.txt  build.gradle
audio-opensles/src/main/: AndroidManifest.xml
audio-opensles/src/main/cpp/: logger.h  native_audio.cpp  native_audio.h  opensles_recorder.cpp  opensles_recorder.h  record_buffer.cpp  record_buffer.h
audio-opensles/src/main/java/com/onzhou/opensles/main/: OpenslesActivity.java
audio-opensles/src/main/java/com/onzhou/opensles/play/: AudioTrackPlayer.java  IAudioPlay.java
audio-opensles/src/main/java/com/onzhou/opensles/recorder/: AudioRecorder.java
audio-opensles/src/main/res/drawable/: btn_background_round_shape.xml
audio-opensles/src/main/res/layout/: activity_opensles_record.xml
audio-opensles/src/main/res/values/: strings.xml
ffmpeg-camera-encode/: CMakeLists.txt  build.gradle
ffmpeg-camera-encode/src/main/: AndroidManifest.xml
ffmpeg-camera-encode/src/main/cpp/: encode_jpeg.cpp  encode_jpeg.h  encode_mp4.cpp  encode_mp4.h  encode_video.cpp  encode_video.h  mp4_encode.cpp  mp4_encode.h  native_code.cpp  native_code.h  native_encode.cpp  native_encode.h  native_encoder.cpp  native_frame.cpp  native_frame.h  video_encode.cpp  video_encode.h  video_encoder.cpp
ffmpeg-camera-encode/src/main/java/com/onzhou/ffmpeg/camera/: CameraV1.java  ICamera.java  NativeFrame.java
ffmpeg-camera-encode/src/main/java/com/onzhou/ffmpeg/encode/: NativeEncoder.java
ffmpeg-camera-encode/src/main/java/com/onzhou/ffmpeg/main/: CameraSurfaceActivity.java
ffmpeg-camera-encode/src/main/res/layout/: activity_native_camera.xml
ffmpeg-camera-encode/src/main/res/raw/: fragment_texture_shader.glsl  vertex_texture_shader.glsl
ffmpeg-camera-encode/src/main/res/values/: strings.xml
ffmpeg-camera-encode/src/test/java/com/onzhou/ffmpeg/encode/: ExampleUnitTest.java
ffmpeg-multiple/: CMakeLists.txt  build.gradle
ffmpeg-multiple-hello/: CMakeLists.txt  build.gradle
ffmpeg-multiple-hello/src/main/: AndroidManifest.xml
ffmpeg-multiple-hello/src/main/cpp/: ffmpeg-hello.c  ffmpeg-hello.h
ffmpeg-multiple-hello/src/main/java/com/onzhou/ffmpeg/hello/: FFmpegHello.java  FFmpegHelloActivity.java
ffmpeg-multiple-hello/src/main/res/values/: strings.xml
ffmpeg-multiple/src/main/: AndroidManifest.xml
ffmpeg-multiple/src/main/cpp/: cmake-hello.c
ffmpeg-multiple/src/main/java/com/onzhou/cmake/hello/: CmakeHello.java  CmakeHelloActivity.java
ffmpeg-multiple/src/main/res/layout/: activity_ffmpeg_cmake_hello.xml
ffmpeg-multiple/src/main/res/values/: strings.xml
ffmpeg-single-cmd/: CMakeLists.txt  build.gradle
ffmpeg-single-cmd/scripts/: build_ffmpeg_x264_fdkaac_merge.sh  copy_ffmpeg_files.sh
ffmpeg-single-cmd/src/main/: AndroidManifest.xml
ffmpeg-single-cmd/src/main/cpp/: cmdutils.c  cmdutils.h  config.h  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_mod.c
ffmpeg-single-cmd/src/main/java/com/onzhou/ffmpeg/cmd/: FFmpegCmd.java  FFmpegCmdActivity.java
ffmpeg-single-cmd/src/main/res/layout/: activity_ffmpeg_cmd.xml
ffmpeg-single-cmd/src/main/res/values/: strings.xml
ffmpeg-single-cmd/src/test/java/com/onzhou/ffmpeg/cmd/: ExampleUnitTest.java
ffmpeg-single-decode/: CMakeLists.txt  build.gradle
ffmpeg-single-decode/src/androidTest/java/com/onzhou/ffmpeg/decode/: ExampleInstrumentedTest.java
ffmpeg-single-decode/src/main/: AndroidManifest.xml
ffmpeg-single-decode/src/main/cpp/: decode_mp4.cpp  decode_mp4.h  ffmpeg_decode.c  logger.h  native_decode.cpp  native_decode.h  video_decode.h
ffmpeg-single-decode/src/main/java/com/onzhou/ffmpeg/decode/: FFmpegDecode.java  FFmpegDecodeActivity.java  NativeDecode.java
ffmpeg-single-decode/src/main/java/com/onzhou/ffmpeg/main/: NativeDecodeActivity.java
ffmpeg-single-decode/src/main/res/layout/: activity_ffmpeg_decode.xml
ffmpeg-single-decode/src/main/res/values/: strings.xml
ffmpeg-single-decode/src/test/java/com/onzhou/ffmpeg/decode/: ExampleUnitTest.java
ffmpeg-single-swscale/: CMakeLists.txt
ffmpeg-single-swscale/src/main/: AndroidManifest.xml
ffmpeg-single-swscale/src/main/cpp/: logger.h  native_code.cpp  native_code.h  native_swscale.cpp  native_swscale.h
ffmpeg-single-swscale/src/main/java/com/onzhou/ffmpeg/main/: NativeSwscaleActivity.java
ffmpeg-single-swscale/src/main/java/com/onzhou/ffmpeg/swscale/: NativeSwscale.java
ffmpeg-single-swscale/src/main/res/layout/: activity_native_swscale.xml
ffmpeg-single-swscale/src/main/res/values/: strings.xml
ffmpeg-single-swscale/src/test/java/com/onzhou/ffmpeg/swscale/: ExampleUnitTest.java
ffmpeg-stream-mp4/: CMakeLists.txt  build.gradle  readme.md
ffmpeg-stream-mp4/src/main/: AndroidManifest.xml
ffmpeg-stream-mp4/src/main/cpp/: logger.h  mp4_stream.c  mp4_stream.cpp  mp4_stream.h  native_stream.cpp  native_stream.h
ffmpeg-stream-mp4/src/main/java/com/onzhou/ffmpeg/main/: NativeStreamActivity.java
ffmpeg-stream-mp4/src/main/java/com/onzhou/ffmpeg/streamer/: NativeStreamer.java
ffmpeg-stream-mp4/src/main/res/layout/: activity_stream.xml
ffmpeg-stream-mp4/src/main/res/values/: strings.xml
sdl2-hello/: CMakeLists.txt  build.gradle
sdl2-hello/src/main/: AndroidManifest.xml
sdl2-hello/src/main/cpp/: sdl2_hello.c
sdl2-hello/src/main/java/org/libsdl/app/: SDLActivity.java
sdl2-hello/src/main/res/layout/: activity_sdl_hello.xml
sdl2-hello/src/main/res/values/: strings.xml
(+252 files in other folders)
